[package]
name = "abner"
version = "0.1.0"
edition = "2024"
description = "A/B video comparison player — play N videos in sync, flip between them."

[dependencies]
anyhow = "1"
log = "0.4"
env_logger = "0.11"
winit = "0.30"
wgpu = "30"
pollster = "1"
bytemuck = { version = "1", features = ["derive"] }
ab_glyph = "0.2"
serde_json = "1"
# In-process libav (same setup as switchblade): links the system ffmpeg 8.x
# dev libraries via pkg-config (`brew install ffmpeg` provides them).
rsmpeg = { version = "0.18", default-features = false, features = ["link_system_ffmpeg", "ffmpeg8"] }

# Fake-fullscreen contour fix on macOS Tahoe: the ~1px window border is
# drawn with the shadow, so we need setHasShadow(false) (see main.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2", features = ["NSResponder", "NSView", "NSWindow"] }

[profile.dev]
# wgpu + shader-heavy code is unusably slow at opt-level 0
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[package.metadata.bundle]
name = "abner"
identifier = "com.abner.app"
icon = ["assets/icons/abner-flat-white.png"]
version = "0.1.0"
copyright = "Copyright © 2026"
category = "Video"
short_description = "A/B video comparison player"
long_description = "Play N videos in sync, flip between them. Frame-locked sync, real-time diff/flip modes."
